# 5vs5dotGG

./: package-lock.json  readme.md
5vs5gg-creator-dashboard/: package-lock.json  package.json  pnpm-lock.yaml
5vs5gg-creator-dashboard/src/: App.jsx
5vs5gg-creator-dashboard/src/components/: CreatorDashboard.jsx
5vs5gg-creator-dashboard/src/services/: solana-service.js
backend/: package.json  pnpm-lock.yaml
backend/src/: index.js
backend/src/controllers/: nftController.js
backend/src/routes/: api.js
backend/src/services/: solanaService.js
backend/src/utils/: walletUtils.js
esport/: Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml  readme.md
esport/programs-ecs/components/creator_revenue/: Cargo.toml
esport/programs-ecs/components/creator_revenue/src/: lib.rs
esport/programs-ecs/components/match_queue/: Cargo.toml
esport/programs-ecs/components/match_queue/src/: lib.rs
esport/programs-ecs/components/player_stats/: Cargo.toml
esport/programs-ecs/components/player_stats/src/: lib.rs
esport/programs-ecs/components/position/src/: lib.rs
esport/programs-ecs/components/team_data/: Cargo.toml
esport/programs-ecs/components/team_data/src/: lib.rs
esport/programs-ecs/components/team_stake/: Cargo.toml
esport/programs-ecs/components/team_stake/src/: lib.rs
esport/programs-ecs/systems/match_system/: Cargo.toml
esport/programs-ecs/systems/match_system/src/: lib.rs
esport/programs-ecs/systems/movement/src/: lib.rs
esport/programs-ecs/systems/revenue_system/: Cargo.toml
esport/programs-ecs/systems/revenue_system/src/: lib.rs
esport/programs-ecs/systems/team_system/: Cargo.toml
esport/programs-ecs/systems/team_system/src/: lib.rs
esport/programs/esport/: Cargo.toml
esport/programs/esport/src/: lib.rs
esport/tests/: esport.ts
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: AnimatedBackground.jsx  App.jsx  index.css
frontend/src/components/: Carousel.jsx  ConnectWallet.jsx  CreateMatchModal.jsx  CreateTeamModal.jsx  CreatorNavBar.jsx  DailyTask.jsx  GameUI.jsx  InsertToken.jsx  InsertTokenButton.jsx  Loading.jsx  LoadingSpinner.jsx  MatchCard.jsx  NFTBox.jsx  NFTSelector.jsx  NavBar.jsx  NextMatch.jsx  PlayerCard.jsx  PlayerNavBar.jsx  Rules.jsx  Stack.jsx  TeamBox.jsx  TeamCard.jsx  TeamList.jsx  TeamSlot.jsx
frontend/src/components/ui/: Button.jsx  ConnectButton.jsx
frontend/src/context/: BoltContext.jsx  WalletContextProvider.jsx
frontend/src/pages/: Home.jsx  InMatch.jsx  Marketplace.jsx  Match.jsx  MatchList.jsx  Profile.jsx  RoleSelection.jsx  SplashScreen.jsx  TeamDetails.jsx  WalletAdapterStyles.css  WalletConnect.jsx
frontend/src/pages/GameSimulation/: GameClass.jsx  GameClasses.jsx  GameMap.jsx  GameVisual.jsx  Simulation.jsx
frontend/src/pages/creator/: CreatorHome.jsx
frontend/src/pages/creator/createNFT/: CreateNFT.jsx  CreatorNFT.jsx
frontend/src/pages/player/: PlayerHome.jsx
frontend/src/pages/player/players/: NFTBuy.jsx  NFTDetail.jsx  PlayerNFT.jsx
frontend/src/pages/player/teams/: CreateTeam.jsx  EditTeam.jsx  PlayerTeams.jsx  TeamDetails.jsx
frontend/src/pages/player/tournaments/: CreateTournament.jsx  TournamentDetail.jsx  Tournaments.jsx
frontend/src/services/: playerStatsService.js
frontend/src/utils/: nftUtils.js
nft/: create-token-umi.ts  game-nfts.json  index.html  mint-game-nfts.ts  mint-simple-nfts.ts  mint-standard-nfts.ts  package.json  pnpm-lock.yaml  readme.md  standard-game-nfts.json  tailwind.config.js  tsconfig.json  vite.config.js
nft/src/: App.jsx
nft/src/components/: Navbar.jsx
nft/src/config/: wallet.js
nft/src/pages/: Mint.jsx
nft/src/utils/: nftErrorHandler.js  nftUtils.js  umiNftMinting.js  walletAdapter.js
nfts/: package.json
