[package]
name = "team_data"
version = "0.2.2"
description = "Team Data Component for 5VS5dotGG"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "team_data"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
