[package]
name = "match_system"
version = "0.2.2"
description = "Match System for 5VS5dotGG"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "match_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
team_data = { version = "0.2.2", path = "../../components/team_data", features = ["cpi"] }
player_stats = { version = "0.2.2", path = "../../components/player_stats", features = ["cpi"] }
position = { version = "0.2.2", path = "../../components/position", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
anchor-lang = { version = "0.30.1", features = ["no-entrypoint"] }
