[package]
name = "revenue_system"
version = "0.2.2"
description = "Revenue System for 5VS5dotGG"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "revenue_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
creator_revenue = { version = "0.2.2", path = "../../components/creator_revenue", features = ["cpi"] }
position = { version = "0.2.2", path = "../../components/position", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"] }
